# DStestprep-app

./: .gitignore  README.md  package.json  tsconfig.base.json  turbo.json
apps/admin/: package.json  tsconfig.json
apps/admin/app/: globals.css  layout.tsx  page.tsx
apps/mobile/: app.json  package-lock.json  package.json
apps/mobile/app/: _layout.tsx  sign-in.tsx
apps/mobile/app/(tabs)/: _layout.tsx  explore.tsx  index.tsx
apps/mobile/app/subjects/: [subjectSlug].tsx
apps/mobile/app/topics/: [topicSlug].tsx
apps/mobile/constants/: brand.ts
apps/mobile/lib/: api.ts  supabase.ts
apps/mobile/providers/: auth-provider.tsx
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
docs/: Execution-Plan-2026-03-08.md  PRD-2026-03-08.md  deep-research-report (1).md  deep-research-report (2).md  deep-research-report.md
services/api/: alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 20260308_0001_initial_schema.py
services/api/app/: __init__.py  config.py  db.py  main.py
services/api/app/api/: router.py
services/api/app/api/routes/: __init__.py  admin.py  catalog.py  health.py  identity.py
services/api/app/dependencies/: __init__.py  auth.py
services/api/app/models/: __init__.py  enums.py  learning.py  session.py  user.py
services/api/app/schemas/: __init__.py  auth.py  learning.py
services/api/app/services/: catalog.py  supabase_auth.py
services/api/dstestprep_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
