[project]
name = "dstestprep-api"
version = "0.1.0"
description = "FastAPI backend for the DS Test Prep platform."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.0,<3.0",
  "pydantic-settings>=2.0,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.0,<2.0",
  "redis>=5.0,<6.0",
  "httpx>=0.27,<1.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]
